@@ -341,6 +341,10 @@
       For \samp{http://} URLs and the default method (\code{"auto"}),
       \code{download.file()} switches to \code{method = "libcurl"} if a
       redirection to a \samp{https://} URL is encountered.
+
+      For \code{url()} with method \code{"default"} and an explicit
+      \code{open} argument, if opening fails because of redirection to
+      an \samp{https://} URL then \code{method = "libcurl"} is tried.
     }
   }
 
